<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"


    tools:context="com.example.rcaceres.exerciseone.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/main_title"
            android:id="@+id/textView8"
            android:background="@color/titleInformation"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/booking"
            android:id="@+id/textView"
            android:textColor="@color/bookingColor"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="9dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/dollar"
                android:background="@android:color/transparent"
                android:id="@+id/imageView"
                android:layout_marginLeft="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/price"
                android:id="@+id/textView2"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:textColor="#252424" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="66dp"
                android:src="@drawable/travel"
                android:id="@+id/imageView2"
                android:layout_marginLeft="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/traveller"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:id="@+id/textView3"
                android:textColor="#252424" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/four"
                android:layout_marginLeft="95dp"
                android:layout_marginTop="15dp"
                android:id="@+id/textView4"
                android:layout_weight="0.15"
                android:textColor="#252424"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/bag"
                android:id="@+id/imageView3"
                android:layout_marginLeft="15dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/trip"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:id="@+id/textView5"
                android:layout_weight="0.15"
                android:textColor="#252424"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/trip_cost"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="15dp"
                android:id="@+id/textView6"
                android:layout_weight="0.15"
                android:textColor="#252424"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/travel_inf"
                android:textColor="@color/bookingColor"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="9dp"
                android:id="@+id/textView7" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText5"
                    android:background="#FFFFFF"
                    android:layout_marginLeft="25dp"
                    android:text="First Name *"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="Last Name *"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:background="#FFFFFF"
                    android:id="@+id/editText"
                    android:layout_gravity="center_horizontal" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:background="#FFFFFF"
                    android:text="Phone"
                    android:ems="10"
                    android:id="@+id/editText2" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:background="#FFFFFF"
                    android:text="Email"
                    android:ems="10"
                    android:id="@+id/editText3" />



                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_traveler"
                        android:id="@+id/button"
                        android:layout_marginTop="20dp"
                        android:background="#40bced"
                        android:textColor="#FFFFFF"
                        android:paddingLeft="5dp"
                        android:paddingTop="15dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="25dp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_continue"
                        android:id="@+id/button2"
                        android:layout_marginTop="20dp"
                        android:textColor="#FFFFFF"
                        android:paddingLeft="15dp"
                        android:paddingTop="15dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="25dp"
                        android:background="#40bced"
                        android:layout_marginLeft="6dp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_add_traveler"
                        android:id="@+id/button3"
                        android:layout_marginTop="20dp"
                        android:textColor="#FFFFFF"
                        android:paddingLeft="9dp"
                        android:paddingTop="15dp"
                        android:paddingRight="9dp"
                        android:paddingBottom="25dp"
                        android:background="#40bced"
                        android:layout_marginRight="6dp"
                        android:layout_marginLeft="6dp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
